--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,6 @@
-/*  your css code here. If applicable */
+h1 {
+    color: black;
+    font-size: 36px;
+    margin-left: 20px;
+    text-align: left;
+}
